--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<link type="text/css" href="lib/jquery-ui/jquery-ui.css" rel="stylesheet" />	
 		<link type="text/css" href="hardflow/css/hardflow.css" rel="stylesheet" />
 		
-		<script src="lib/jquery/jquery-1.12.3.min.js" type="text/javascript"></script>
-		<script src="lib/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
+		<script src="lib/jquery/jquery-1.12.3.js" type="text/javascript"></script>
+		<script src="lib/jquery-ui/jquery-ui.js" type="text/javascript"></script>
 		
-		<script src="lib/raphael/raphael-min.js" type="text/javascript"></script>
+		<script src="lib/raphael/raphael.js" type="text/javascript"></script>
 		
-		<script src="lib/underscore/underscore.min.js" type="text/javascript"></script>
-		<script src="lib/backbone/backbone.min.js" type="text/javascript"></script>
+		<script src="lib/underscore/underscore.js" type="text/javascript"></script>
+		<script src="lib/backbone/backbone.js" type="text/javascript"></script>
 		
 		<script src="lib/laydate/laydate.js" type="text/javascript"></script>
 
@@ -71,8 +71,10 @@
 					<li class="menu-item ticon7 ui-draggable startevent" type="startevent">开始</li>
 					<li class="menu-item ticon8 ui-draggable endevent" type="endevent">结束</li>
 					<li class="menu-item ticon12 ui-draggable usertask" type="usertask">任务</li>
+					<!--
 					<li class="menu-item ticon11 ui-draggable conditionnode" type="conditionnode">条件分支</li>
 					<li class="menu-item ticon13 ui-draggable timetask" type="timetask">定时任务</li>
+					-->
 					<li class="menu-split"></li>
 				</ul>
 			</div>
@@ -162,7 +164,7 @@
 		jQuery(function($){
 			var designer = new Designer();
 			designer.bind("appInited", function(){
-				designer.loadApp({doc:{});
+				designer.loadApp();
 			});
 			designer.render();
 		});
